--- a/html/bonus1.html
+++ b/html/bonus1.html
@@ -15,7 +15,7 @@
     <title>8 façons simples d’améliorer la typographie dans vos designs</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/bonus1.css" />
-    <link rel="icon" href="../img/rocket - 24px.png" />
+    <link rel="icon" href="../img/rocket.png" />
   </head>
   <body>
     <h1>
@@ -32,41 +32,42 @@
       <section>
         <h3>semantic hidden</h3>
         <p>
-         <span id="maj">C</span>et article a été écrit pour publication dans Smashing Magazine le 3
-          avril 2009. Je le reproduis ici pour vous être agréable.
+          <span id="maj">C</span>et article a été écrit pour publication dans
+          Smashing Magazine le 3 avril 2009. Je le reproduis ici pour vous être
+          agréable.
         </p>
 
         <p>
-          Beaucoup de gens, y compris les designers, pensent que la
-          typographie consiste à choisir une police, sa taille et si elle doit
-          être grasse ou pas. Pour la plupart des gens, ça s&#8239'arrête là. Obtenir
-          une bonne typographie demande tellement plus, notamment de s&#8239'attarder
-          sur les détails que les designers négligent souvent.
+          Beaucoup de gens, y compris les designers, pensent que la typographie
+          consiste à choisir une police, sa taille et si elle doit être grasse
+          ou pas. Pour la plupart des gens, ça s&#8239;'arrête là. Obtenir une
+          bonne typographie demande tellement plus, notamment de
+          s&#8239;'attarder sur les détails que les designers négligent souvent.
         </p>
         <p>
           Ces détails donnent au designer le contrôle total, leur permettant d
-         &#8239'apporter une typographie belle et cohérente à leurs designs. Bien que
-          ces subtilités puissent être appliquées à différents types de médias,
-          dans cet article nous nous concentrerons sur leur application au
-          design web à travers l&#8239'utilisation des CSS.
+          &#8239;'apporter une typographie belle et cohérente à leurs designs.
+          Bien que ces subtilités puissent être appliquées à différents types de
+          médias, dans cet article nous nous concentrerons sur leur application
+          au design web à travers l&#8239;'utilisation des CSS.
         </p>
         <p>
-          Voici donc 8 façons simples d&#8239'améliorer la typographie, et donc l
-         &#8239'ergonomie, de vos designs.
+          Voici donc 8 façons simples d&#8239;'améliorer la typographie, et donc
+          l &#8239;'ergonomie, de vos designs.
         </p>
       </section>
       <section>
         <h3>Justification</h3>
         <p>
-          La justification est la longueur d&#8239'une ligne de texte. Pour l&#8239'œil d
-         &#8239'un lecteur, des lignes trop longues ou trop courtes peuvent être
-          fatigantes et gênantes. Une justification longue perturbe le rythme de
-          lecture car le lecteur a du mal à localiser la prochaine ligne de
-          texte. Une justification étroite n&#8239'est acceptable que pour de petites
-          quantités de texte. Pour une lisibilité optimale, vous devriez avoir
-          une justification de 40 à 80 caractères, espaces inclus. Pour un
-          design à une seule colonne, une justification de 65 caractères est
-          considérée comme idéale.
+          La justification est la longueur d&#8239;'une ligne de texte. Pour
+          l&#8239;'œil d &#8239;'un lecteur, des lignes trop longues ou trop
+          courtes peuvent être fatigantes et gênantes. Une justification longue
+          perturbe le rythme de lecture car le lecteur a du mal à localiser la
+          prochaine ligne de texte. Une justification étroite n&#8239;'est
+          acceptable que pour de petites quantités de texte. Pour une lisibilité
+          optimale, vous devriez avoir une justification de 40 à 80 caractères,
+          espaces inclus. Pour un design à une seule colonne, une justification
+          de 65 caractères est considérée comme idéale.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/justification.jpg"
@@ -74,11 +75,11 @@
           title="Exemple d'une justification correcte"
         />
         <p>
-          Une manière simple pour calculer la justification est d&#8239'utiliser la
-          méthode de Robert Bringhurst, qui multiplie la taille de la police par
-          30. Si la taille de la police est de 10px, la multiplier par 30 vous
-          donne une justification de 300px ou environ 65 caractères par ligne.
-          Le code ressemblerait à quelque chose comme:
+          Une manière simple pour calculer la justification est
+          d&#8239;'utiliser la méthode de Robert Bringhurst, qui multiplie la
+          taille de la police par 30. Si la taille de la police est de 10px, la
+          multiplier par 30 vous donne une justification de 300px ou environ 65
+          caractères par ligne. Le code ressemblerait à quelque chose comme:
         </p>
         <pre>
                 p {
@@ -91,21 +92,22 @@
       <section>
         <h3>Interlignage</h3>
         <p>
-          L&#8239'interlignage est l&#8239'espace entre les lignes du corps de texte qui
-          joue un rôle important dans sa lisibilité. Des lignes correctement
-          espacées permettent au lecteur de mieux cerner la fonte et améliorent
-          l&#8239'apparence globale du texte. L&#8239'interlignage altère aussi la couleur
-          typographique, qui est la densité ou la tonalité d&#8239'une composition.
+          L&#8239;'interlignage est l&#8239;'espace entre les lignes du corps de
+          texte qui joue un rôle important dans sa lisibilité. Des lignes
+          correctement espacées permettent au lecteur de mieux cerner la fonte
+          et améliorent l&#8239;'apparence globale du texte.
+          L&#8239;'interlignage altère aussi la couleur typographique, qui est
+          la densité ou la tonalité d&#8239;'une composition.
         </p>
         <p>
-          Plusieurs facteurs impactent l&#8239'interlignage: police, taille, graisse,
-          casse, justification, intermot de la fonte, etc. Plus la justification
-          est longue, plus l&#8239'interlignage devient nécessaire. À l&#8239'inverse,
-          plus la taille de la fonte augmente, plus l&#8239'interlignage peut être
-          réduit. Une bonne règle est de déterminer un interlignage de 2 à 5
-          points plus grand que la taille de la fonte, selon la police. Si vous
-          avez une fonte de 12pt, un interlignage de 15 à 16pt devrait bien
-          fonctionner sur le Web.
+          Plusieurs facteurs impactent l&#8239;'interlignage: police, taille,
+          graisse, casse, justification, intermot de la fonte, etc. Plus la
+          justification est longue, plus l&#8239;'interlignage devient
+          nécessaire. À l&#8239;'inverse, plus la taille de la fonte augmente,
+          plus l&#8239;'interlignage peut être réduit. Une bonne règle est de
+          déterminer un interlignage de 2 à 5 points plus grand que la taille de
+          la fonte, selon la police. Si vous avez une fonte de 12pt, un
+          interlignage de 15 à 16pt devrait bien fonctionner sur le Web.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/interlignage.jpg"
@@ -129,9 +131,9 @@
         <p>
           Placez les guillemets dans la marge du corps de texte. En ignorant
           cela, un guillemet aligné avec le texte interrompra la marge gauche et
-          perturbera le rythme du lecteur. Placer les guillemets à l&#8239'extérieur
-          permet de conserver l&#8239'alignement à gauche intact et équilibré,
-          améliorant ainsi la lisibilité.
+          perturbera le rythme du lecteur. Placer les guillemets à
+          l&#8239;'extérieur permet de conserver l&#8239;'alignement à gauche
+          intact et équilibré, améliorant ainsi la lisibilité.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/guillemets.jpg"
@@ -140,7 +142,7 @@
         />
         <p>
           Ce résultat est obtenu très facilement avec CSS en utilisant l
-         &#8239'élément blockquote:
+          &#8239;'élément blockquote:
         </p>
         <pre>
             blockquote {
@@ -150,8 +152,8 @@
             </pre
         >
         <p>
-          L&#8239'indentation négative dépendra de la police, de la taille de la
-          fonte et des marges utilisées.
+          L&#8239;'indentation négative dépendra de la police, de la taille de
+          la fonte et des marges utilisées.
         </p>
       </section>
       <section>
@@ -162,8 +164,9 @@
           facilement le flux du texte, ce qui par la même augmente la
           lisibilité. Un rythme continu dans la dimension verticale maintient
           tout le texte sur une grille cohérente, afin que la proportion et l
-         &#8239'équilibre soient conservés dans toute la page, quels que soient la
-          taille de la fonte, l&#8239'interlignage ou la justification.
+          &#8239;'équilibre soient conservés dans toute la page, quels que
+          soient la taille de la fonte, l&#8239;'interlignage ou la
+          justification.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/rythme-vertical.jpg"
@@ -171,12 +174,13 @@
           title="Exemple d'un rythme vertical correcte"
         />
         <p>
-          Pour conserver un rythme vertical en CSS il faut que l&#8239'espacement
-          entre les éléments et l&#8239'interlignage soient égaux à la taille de la
-          grille de référence. Par exemple, disons que vous utilisez une grille
-          de référence de 15px, ce qui signifie qu&#8239'il y a 15px entre chaque
-          ligne de base. L&#8239'interlignage serait de 15px et l&#8239'espace entre
-          chaque paragraphe serait également de 15px. Voici un exemple:
+          Pour conserver un rythme vertical en CSS il faut que
+          l&#8239;'espacement entre les éléments et l&#8239;'interlignage soient
+          égaux à la taille de la grille de référence. Par exemple, disons que
+          vous utilisez une grille de référence de 15px, ce qui signifie
+          qu&#8239;'il y a 15px entre chaque ligne de base.
+          L&#8239;'interlignage serait de 15px et l&#8239;'espace entre chaque
+          paragraphe serait également de 15px. Voici un exemple:
         </p>
         <pre>
             body {
@@ -189,21 +193,21 @@
               }
         </pre>
         <p>
-          Cela permet à chaque paragraphe de s&#8239'aligner sur la grille et ainsi
-          de conserver le rythme vertical du texte.
+          Cela permet à chaque paragraphe de s&#8239;'aligner sur la grille et
+          ainsi de conserver le rythme vertical du texte.
         </p>
       </section>
       <section>
         <h3>Veuves et Orphelines</h3>
         <p>
-          Une veuve est une ligne courte ou un mot unique à la fin d&#8239'un
+          Une veuve est une ligne courte ou un mot unique à la fin d&#8239;'un
           paragraphe. Un orphelin est un mot ou une ligne courte au début ou à
-          la fin d&#8239'une colonne séparée du reste du paragraphe. Les veuves et
-          les orphelines créent des drapeaux inélégants, interrompent l&#8239'œil du
-          lecteur et affectent la lisibilité. Ils peuvent être évités en
-          ajustant la taille de la fonte, l&#8239'interlignage, la justification, l
-         &#8239'intermots, l&#8239'interlettrage ou en entrant manuellement des sauts de
-          ligne.
+          la fin d&#8239;'une colonne séparée du reste du paragraphe. Les veuves
+          et les orphelines créent des drapeaux inélégants, interrompent
+          l&#8239;'œil du lecteur et affectent la lisibilité. Ils peuvent être
+          évités en ajustant la taille de la fonte, l&#8239;'interlignage, la
+          justification, l &#8239;'intermots, l&#8239;'interlettrage ou en
+          entrant manuellement des sauts de ligne.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/veuves-orphelins.jpg"
@@ -211,8 +215,8 @@
           title="Exemple d'une veuve ou orphelin correcte"
         />
         <p>
-          Malheureusement, il n&#8239'existe pas de moyen facile pour empêcher les
-          veuves et orphelines typographiques avec CSS. Une façon de les
+          Malheureusement, il n&#8239;'existe pas de moyen facile pour empêcher
+          les veuves et orphelines typographiques avec CSS. Une façon de les
           supprimer a été mentionnée précédemment, mais il existe également un
           plugin jQuery nommé
           <a
@@ -222,7 +226,7 @@
             target="_blank"
             >jQWidon't</a
           >
-          qui place un espace insécable entre les deux derniers mots d&#8239'un
+          qui place un espace insécable entre les deux derniers mots d&#8239;'un
           élément.
         </p>
         <p>
@@ -233,14 +237,14 @@
       <section>
         <h3>Emphase</h3>
         <p>
-          Mettre l&#8239'emphase sur un mot sans interrompre le lecteur est
-          important. L&#8239'italique est généralement considéré comme étant la forme
-          idéale d&#8239'emphase. D&#8239'autres formes d&#8239'emphase communes sont : gras,
-          les capitales, les petites capitales, la taille de la fonte, la
-          couleur, le soulignement ou une police de caractères différente.
-          Essayez de vous limiter à une emphase unique, quelle qu&#8239'elle soit.
-          Les combinaisons comme capitales-gras-italique sont perturbantes et
-          ont l&#8239'air gauche.
+          Mettre l&#8239;'emphase sur un mot sans interrompre le lecteur est
+          important. L&#8239;'italique est généralement considéré comme étant la
+          forme idéale d&#8239;'emphase. D&#8239;'autres formes d&#8239;'emphase
+          communes sont : gras, les capitales, les petites capitales, la taille
+          de la fonte, la couleur, le soulignement ou une police de caractères
+          différente. Essayez de vous limiter à une emphase unique, quelle
+          qu&#8239;'elle soit. Les combinaisons comme capitales-gras-italique
+          sont perturbantes et ont l&#8239;'air gauche.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/emphase.jpg"
@@ -263,26 +267,28 @@
               }
         </pre>
         <p>
-          Gardez à l&#8239'esprit que le style font-variant ne fonctionne que si la
-          police choisie supporte la variante small-caps (petites capitales).
+          Gardez à l&#8239;'esprit que le style font-variant ne fonctionne que
+          si la police choisie supporte la variante small-caps (petites
+          capitales).
         </p>
       </section>
       <section>
         <h3>Échelle</h3>
         <p>
-          Composez toujours à partir d&#8239'une échelle, que ce soit l&#8239'échelle
-          traditionnelle développée au 16ème siècle de laquelle nous sommes tous
-          familiers, ou une que vous créez vous-même. Une échelle est importante
-          parce qu&#8239'elle établit une hiérarchie typographique qui améliore la
-          lisibilité et crée une harmonie et cohérence à l&#8239'intérieur du texte.[
-          image :http://www.pompage.net/IMG/jpg/echelle.jpg]
+          Composez toujours à partir d&#8239;'une échelle, que ce soit
+          l&#8239;'échelle traditionnelle développée au 16ème siècle de laquelle
+          nous sommes tous familiers, ou une que vous créez vous-même. Une
+          échelle est importante parce qu&#8239;'elle établit une hiérarchie
+          typographique qui améliore la lisibilité et crée une harmonie et
+          cohérence à l&#8239;'intérieur du texte.[ image
+          :http://www.pompage.net/IMG/jpg/echelle.jpg]
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/echelle.jpg"
           alt="Exemple d'Échelle correcte"
           title="Exemple d'Échelle correcte"
         />
-        <p>Voici un exemple d&#8239'échelle typographique définie en CSS:</p>
+        <p>Voici un exemple d&#8239;'échelle typographique définie en CSS:</p>
         <pre>
             h1 {
                 font-size: 48px;
@@ -313,11 +319,11 @@
           Lorsque vous ferrez un bloc de texte, à gauche ou à droite, un texte
           non justifié, soyez sûr de maintenir le drapeau (le côté inégal)
           équilibré sans aucuns «trous» inattendus ou formes bizarres. Un
-          mauvais drapeau peut être déstabilisant pour l&#8239'œil et distraire le
-          lecteur. Un bon drapeau est plus «doux», sans lignes trop longues ou
-          trop courtes. Il n&#8239'existe aucun moyen de contrôler cela en CSS, donc
-          pour obtenir un bon drapeau vous devez faire des ajustements manuels
-          sur le bloc de texte.
+          mauvais drapeau peut être déstabilisant pour l&#8239;'œil et distraire
+          le lecteur. Un bon drapeau est plus «doux», sans lignes trop longues
+          ou trop courtes. Il n&#8239;'existe aucun moyen de contrôler cela en
+          CSS, donc pour obtenir un bon drapeau vous devez faire des ajustements
+          manuels sur le bloc de texte.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/drapeaux.jpg"
@@ -326,7 +332,7 @@
         />
         <p>
           La césure peut aussi aider à faire des drapeaux propres, mais
-          malheureusement les CSS ne peuvent pas le gérer pour l&#8239'instant.
+          malheureusement les CSS ne peuvent pas le gérer pour l&#8239;'instant.
           Peut-être dans un avenir proche, allons-nous avoir
           <a
             href="http://www.w3.org/TR/abbrCSS/abbr3-text/#hyphenate"
@@ -334,7 +340,7 @@
             lang="en"
             target="_blank"
             >une certaine mesure de contrôle avec CSS 3</a
-          >. Tout n&#8239'est pas perdu cela dit. Il existe quelques solutions
+          >. Tout n&#8239;'est pas perdu cela dit. Il existe quelques solutions
           serveur et côté client pour une césure automatique comme
           <a
             href="http://yellowgreen.de/phpHyphenator"
@@ -364,8 +370,8 @@
       <section>
         <h3>Ressources supplémentaires</h3>
         <p>
-          Voici une liste d&#8239'articles et livres sur le même thème pour vous
-          aider avec les détails:
+          Voici une liste d&#8239;'articles et livres sur le même thème pour
+          vous aider avec les détails:
         </p>
         <ul>
           <li>
@@ -467,15 +473,14 @@
 
     <hr />
     <footer>
-        <p>
-            source:
-            <a
-              href="http://www.pompage.net/traduction/8-facons-simples-d-ameliorer-la-typographie-dans-vos"
-              target="_blank"
-              >pompage.net</a
-            >
-          </p>
+      <p>
+        source:
+        <a
+          href="http://www.pompage.net/traduction/8-facons-simples-d-ameliorer-la-typographie-dans-vos"
+          target="_blank"
+          >pompage.net</a
+        >
+      </p>
     </footer>
-   
   </body>
 </html>
