--- a/html/bonus2.html
+++ b/html/bonus2.html
@@ -11,7 +11,7 @@
     <title>Petit Guide de typographie</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/bonus2.css" />
-    <link rel="icon" href="../img/rocket - 24px.png" />
+    <link rel="icon" href="../img/rocket.png" />
   </head>
   <body>
     <h1>Petit guide des polices et de la typographie</h1>
