--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="./img/rocket - 24px.png" />
+    <link rel="icon" href="./img/rocket.png" />
     <title>Le paysan chinois</title>
   </head>
   <body>
